<resources>
    <string name="app_name">Vass Express</string>
    <string name="title">Title</string>
    <string name="excerpt">Flask adalah sebuah web app framework. Apa itu Framework? Framework adalah sebuah kode library yang berisi tools dan lainnya yang mana framework dapat membuat pekerjaan developer menjadi lebih mudah, yaitu memberikan kode atau ekstensi yang dapat digunakan kembali untuk operasi umum. Ada beberapa framework di python, termasuk Flask, Django, Tornado dan Pyramid.</string>
    <string name="related_post">Related post</string>
    <string name="date">12 decmber</string>
    <string name="comments">Comments</string>
    <string name="home">Home</string>
    <string name="user">User</string>
    <string name="library">Library</string>
    <string name="reply">reply</string>
    <string name="notification">Notification</string>
    <string name="wallet">Wallet</string>
    <string name="add">Add</string>
    <string name="messages">Messages</string>
    <string name="balance">Sisa Saldo</string>
    <string name="rupiah">Rp 1.000.000</string>
    <string name="mart">Mart</string>
    <string name="pos">Pos</string>
    <string name="ads">Ads</string>
    <string name="promo">Promo</string>
    <string name="menu">Menu</string>
    <string name="toko">Toko</string>
    <string name="transaksi">Transaksi</string>
    <string name="bantuan">Bantuan</string>
    <string name="special_title">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="spesial_dari_vazz">Spesial dari Vazz</string>
    <string name="history">History</string>
    <string name="penarikan">Tarik</string>
    <string name="top_up">Top up</string>
    <string name="success">success</string>
    <string name="buat_iklan">Buat iklan</string>
    <string name="rp">Rp</string>
    <string name="masukan_jumlah">Masukan jumlah</string>
    <string name="jumlah_penarikan">Jumlah minimal penarikah adalah Rp 10.000</string>
    <string name="nama_lengkap">Nama lengkap</string>
    <string name="alamat_lengkap">Alamat lengkap</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="email">Email</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="registrasi">Registrasi</string>
    <string name="kota">Kota</string>
    <string name="password">Password</string>
    <string name="ulangi_password">Ulangi password</string>
    <string name="ktp">Nama pemilik usaha</string>
    <string name="error_name">Nama tidak boleh kurang dari 3 huruf</string>
    <string name="info_dasar">Info Dasar</string>
    <string name="welcome_header">Selamat Datang di <br /><b>Vazz Merchant</b></string>
    <string name="daftar">Belum punya akun? Daftar disini yuk!</string>
    <string name="usaha">Pilih Jenis Usaha</string>
    <string name="food">Food</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="menu_lainnya">Menu Lainnya</string>
    <string name="edit">Edit</string>
    <string name="cari_produk">Cari produk</string>
    <string name="urutkan">Urutkan</string>
    <string name="terlama">Terlama</string>
    <string name="terlaris">Terlaris</string>
    <string name="terbaru">Terbaru</string>
    <string name="kurir">Kurir</string>
    <string name="mitra_kurir">Mitra</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="masukan_pesan">Masukan Pesan</string>
    <string name="times">12:12</string>
    <string name="baru">Baru</string>
    <string name="kondisi">Kondisi</string>
    <string name="detail_pruduk">Detail Pruduk</string>
    <string name="min_pesan">Min Pesan</string>
    <string name="jumlah">1</string>
    <string name="rak">Rak</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="gambar_produk">Gambar produk</string>
    <string name="iklankan_toko">Iklankan toko</string>
    <string name="iklankan_product">Iklankan Product</string>
    <string name="history_iklan">History Iklan</string>
    <string name="daging">Daging</string>
    <string name="etalase">Etalase</string>
    <string name="durian">Durian</string>
    <string name="semangka">Semangka</string>
    <string name="diskon">Diskon</string>
    <string name="voucher">Voucher</string>
    <string name="laporan_penjualan">Laporan Penjualan</string>
    <string name="stock">Stock</string>
    <string name="performa">Performa</string>
    <string name="harga_satuan">Harga Satuan</string>
    <string name="lima_belas">Rp 15.000</string>
    <string name="province">Provinsi</string>
    <string name="info_merchant">Informasi Toko</string>
    <string name="description">Deskripsi Toko</string>
    <string name="regencies">Kabupaten</string>
    <string name="district">Kecamatan</string>
    <string name="code_pos">Kode pos</string>
    <string name="upload">Upload foto toko anda</string>
    <string name="detail_alamat" translatable="false">Detail Alamat</string>
    <string name="exit">Exit</string>
    <string name="welcome">Selamat datang</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="always_open">Always Open</string>
    <string name="closed">Closed</string>
    <string name="open">Open</string>
    <string name="villages">Desa</string>
    <string name="informasi_produk">Informasi produk</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="price">Harga</string>
    <string name="deskipsi_produk">Deskipsi produk</string>
    <string name="status_product">Status Produk</string>


</resources>