<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_outline_home_24"/>


    <item
        android:id="@+id/messages"
        android:title="@string/messages"
        android:icon="@drawable/ic_baseline_message_24"/>

    <item
        android:id="@+id/add_new"
        android:title="@string/add"
        android:icon="@drawable/ic_baseline_add_24"/>

    <item
        app:iconTint="@color/white"
        android:id="@+id/library"
        android:title="@string/transaksi"
        android:icon="@drawable/ic_transaction" />

    <item
        android:id="@+id/person"
        android:title="@string/user"
        android:icon="@drawable/ic_outline_person_24"/>

</menu>