<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:src="@drawable/ic_outline_collections_24"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/author_avatar"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/author_name"
            android:text="@string/title"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:id="@+id/date_comment"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excerpt"
            android:id="@+id/content_comment"/>

    </LinearLayout>

</LinearLayout>