<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usaha"
        style="@style/TextAppearance.AppCompat.Headline"/>

    <TextView
        android:id="@+id/food"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/mart"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mart"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/lanjut"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/lanjutkan" />
</LinearLayout>