<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/top"
        android:padding="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/history_value"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupiah"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#4FFF05"
                android:id="@+id/history_status"
                android:gravity="end|bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/success"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/history_date"
        android:layout_marginStart="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bantuan"
        android:layout_alignBottom="@id/top"/>
</RelativeLayout>