<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bantuan"
                style="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/notif_adapter_title"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1">

            <TextView
                android:text="@string/masukan_jumlah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/notif_adapter_date"/>
        </LinearLayout>
    </LinearLayout>

        <TextView
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:text="@string/history"
            android:id="@+id/notif_adapter_desc"/>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="0.2dp"
        android:background="@color/black"/>
</LinearLayout>