<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:orientation="vertical">


   <androidx.cardview.widget.CardView
       app:cardCornerRadius="10dp"
       android:padding="10dp"
       app:cardElevation="10dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingBottom="10dp"
           android:orientation="horizontal">

           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <ImageView
                   android:src="@drawable/ic_loading"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:contentDescription="@string/app_name"
                   android:id="@+id/featured_images"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   style="@style/TextAppearance.MaterialComponents.Headline6"
                   android:id="@+id/title"
                   android:text="@string/title"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/excerpt"
                   android:text="@string/excerpt"/>
           </LinearLayout>


       </LinearLayout>
   </androidx.cardview.widget.CardView>

</LinearLayout>