<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E6E6E6"
    tools:context=".views.home.mart.MartEditContent">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<!--
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                app:layout_scrollFlags="scroll|enterAlways"
                android:layout_width="match_parent"
                android:layout_height="69dp"/>

        </com.google.android.material.appbar.AppBarLayout>-->

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
               <!-- <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/slider_edit"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:sliderStartAutoCycle="true"
                    app:sliderAnimationDuration="600"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderScrollTimeInSec="3"/>-->

                <LinearLayout

                    android:background="@color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--<LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gambar_produk"
                            style="@style/TextAppearance.AppCompat.Title"/>

                        <ImageView
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_edit_24"
                            android:contentDescription="@string/special_title"/>
                    </LinearLayout>-->
                    <ImageView
                        android:contentDescription="@string/bantuan"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="150dp"
                        android:src="@drawable/slider1"/>
                </LinearLayout>

                <LinearLayout
                    android:background="@color/white"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginTop="5dp"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/harga_barang"
                            android:text="@string/rupiah"
                            style="@style/TextAppearance.AppCompat.Title"/>

                        <ImageView
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_edit_24"
                            android:contentDescription="@string/special_title"/>
                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/diskon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bantuan"
                        android:id="@+id/title_barang"
                        style="@style/TextAppearance.AppCompat.Medium"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginTop="10dp"
                    android:padding="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_pruduk"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:id="@+id/detail_produk"/>
                        <ImageView
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_edit_24"
                            android:contentDescription="@string/special_title"/>
                    </LinearLayout>



                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/min_pesan"
                            android:id="@+id/min_pesan"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/jumlah"
                            android:id="@+id/jumlah"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rak"
                            android:id="@+id/rak"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/baru"
                            android:id="@+id/rak_toko"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/harga_satuan"
                            android:id="@+id/kondisi"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lima_belas"
                            android:id="@+id/baru_or_seken"/>
                    </LinearLayout>


                    <TextView
                        android:id="@+id/deskripsi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/search_hint" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selengkapnya"
                        android:textStyle="bold"
                        android:textColor="@color/primaryColor"
                        android:id="@+id/baca_selengkapnya"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>